<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".SettingSelect">

    <Button
        android:id="@+id/Back"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:text="@string/select_back"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/Confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Confirm"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Confirm"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/GameMode"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/mode"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:textSize="24sp"
        android:gravity="start"
        app:layout_constraintBottom_toTopOf="@+id/Confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/mute"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/setMute"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        android:textSize="24sp"
        android:gravity="start"
        app:layout_constraintBottom_toTopOf="@+id/GameMode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" /><!-- gravity of the toggle button-->

</android.support.constraint.ConstraintLayout>